--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button id="botao">Tamanho</button>
     <div id="container"></div>
     <script src="index.js"></script>
 </body>
